--- a/src/package.json
+++ b/src/package.json
@@ -14,6 +14,7 @@
     "@types/cors": "^2.8.17",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^5.0.0",
+    "@types/figlet": "^1.5.8",
     "@types/json-bigint": "^1.0.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
@@ -21,6 +22,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.0.0",
+    "figlet": "^1.7.0",
     "json-bigint": "^1.0.0",
     "nodemon": "^3.1.7",
     "pino": "^9.4.0",
