--- a/src/package.json
+++ b/src/package.json
@@ -16,6 +16,7 @@
     "@types/express": "^5.0.0",
     "@types/figlet": "^1.5.8",
     "@types/json-bigint": "^1.0.4",
+    "@types/lodash": "^4.17.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
   },
