--- a/src/package.json
+++ b/src/package.json
@@ -26,6 +26,7 @@
     "express": "^5.0.0",
     "figlet": "^1.7.0",
     "json-bigint": "^1.0.0",
+    "lodash": "^4.17.21",
     "nodemon": "^3.1.7",
     "pino": "^9.4.0",
     "pino-pretty": "^11.2.2",
