--- a/src/.env.template
+++ b/src/.env.template
@@ -1,6 +1,13 @@
-PORT=
-PROVIDER_PROJECT_ID=
-PROVIDER_URL=
-NETWORK=
-CARDANO_NODE_URL=
-HYDRA_NODE_URL
+PORT=1
+PROVIDER_PROJECT_ID=""
+PROVIDER_URL=""
+NETWORK=""
+VALIDATOR_REF=""
+ADMIN_KEY=""
+HYDRA_KEY=""
+SEED=""
+ADMIN_NODE_WS_URL=""
+ADMIN_NODE_API_URL=""
+ADMIN_ADDRESS=""
+USER_ADDRESS=""
+USER_SEED=""
