--- a/src/package.json
+++ b/src/package.json
@@ -11,7 +11,11 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "demo": "tsx offchain/test/demo.ts",
     "ws": "tsx offchain/test/websocket.ts",
-    "deploy": "tsx offchain/handlers/deploy-validator.ts"
+    "deploy": "tsx offchain/handlers/deploy-validator.ts",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix .",
+    "format": "prettier --write .",
+    "format:check": "prettier --check ."
   },
   "devDependencies": {
     "@types/blake2b": "^2.1.3",
@@ -27,6 +31,7 @@
     "typescript": "^5.7"
   },
   "dependencies": {
+    "@eslint/js": "^9.28.0",
     "@lucid-evolution/lucid": "^0.4.27",
     "@prisma/client": "^5.22.0",
     "axios": "^1.7.7",
@@ -44,6 +49,7 @@
     "pino-pretty": "^11.2.2",
     "prisma": "^5.22.0",
     "tsx": "^4.19.1",
+    "typescript-eslint": "^8.33.1",
     "ws": "^8.18.0",
     "zod": "^3.23.8"
   }
