--- a/src/package.json
+++ b/src/package.json
@@ -47,6 +47,7 @@
     "nodemon": "^3.1.7",
     "pino": "^9.4.0",
     "pino-pretty": "^11.2.2",
+    "prettier": "^3.5.3",
     "prisma": "^5.22.0",
     "tsx": "^4.19.1",
     "typescript-eslint": "^8.33.1",
