change previous hydraKey references to hydraInitialKey; define hydraDepositKey in env file

--- a/src/.env.template
+++ b/src/.env.template
@@ -4,10 +4,12 @@ PROVIDER_URL=""
 NETWORK=""
 VALIDATOR_REF=""
 ADMIN_KEY=""
-HYDRA_KEY=""
+HYDRA_INITIAL_KEY=""
+HYDRA_DEPOSIT_KEY=""
+LOGGER_LEVEL=""
+ADMIN_ADDRESS=""
 SEED=""
 ADMIN_NODE_WS_URL=""
 ADMIN_NODE_API_URL=""
-ADMIN_ADDRESS=""
-USER_ADDRESS=""
-USER_SEED=""
+DATABASE_URL=""
+
