--- a/src/.env.template
+++ b/src/.env.template
@@ -3,11 +3,8 @@ PROVIDER_PROJECT_ID=""
 PROVIDER_URL=""
 NETWORK=""
 VALIDATOR_REF=""
-ADMIN_KEY=""
 HYDRA_KEY=""
 SEED=""
 ADMIN_NODE_WS_URL=""
 ADMIN_NODE_API_URL=""
-ADMIN_ADDRESS=""
-USER_ADDRESS=""
-USER_SEED=""
+LOGGER_LEVEL=""
